<resources>
    <string name="app_name">The Real Flower</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="login">Log in</string>
    <string name="singup">Sign up</string>
    <string name="button_google">Google</string>
    <string name="button_facebook">Facebook</string>
    <string name="login_failed">Failed login</string>
    <string name="signin_failed">Failed sigin</string>
    <string name="username">Username</string>
    <string name="password_confirm">Confirm password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="register">Register</string>
    <string name="incomplite_fields">Incomplete fields!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="uploadImage">Upload iamge</string>
    <string name="upload">Upload</string>
    <string name="takePhoto">Take photo</string>
    <string name="image_required">Image required</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="signout">Sign out</string>
    <string name="title_activity_proba">ProbaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homescreen">Home</string>
    <string name="title_social">Social</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_ranking">Ranking</string>
    <string name="title_activity_add_post_maps">Map</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="get_location">Get location</string>
    <string name="add_photos">Add photos</string>
    <string name="post">Post</string>
    <string name="set_location">Set location</string>
    <string name="choose_location">Choose location</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="users_on">Users ON</string>
    <string name="users_off">Users OFF</string>
    <string name="posts_on">Posts ON</string>
    <string name="posts_off">Posts OFF</string>
    <string name="title_activity_show_post">ShowPostActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_social_tabs">SocialTabsActivity</string>
    <string name="friends">Friends</string>
    <string name="nearby">Nearby</string>
    <string name="title_activity_aasdadasdasdasd">aasdadasdasdasd</string>
    <string name="available">Available</string>
    <string name="discovery_on">Discovery ON</string>
    <string name="discovery_off">Discovery OFF</string>
    <string name="start_discovery">Start discovery</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="discoverable">Discoverable</string>
    <string name="location_sharing">Location sharing</string>
    <string name="title_activity_ranking">Rankking list</string>
    <string name="actions">Actions</string>
    <string name="start_location_tracking">Start location tracking</string>
    <string name="stop_location_tracking">Stop location tracking</string>
    <string name="stop">Stop</string>
    <string name="location_tracking_stopped">Location tracking stopped</string>
    <string name="location_tracking">Location tracking</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="connect">Connect</string>
    <string name="send">Send</string>

    <string name="title_activity_fullscreen_post">FullscreenPostActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="friend_req_from">Friend request from</string>
</resources>
