<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/outline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/baseline_people_outline_24"
        android:title="@string/title_social" />
    <item
        android:id="@+id/blanco"
        android:title="" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/baseline_public_24"
        android:title="@string/title_explore" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/title_profile" />

</menu>
