<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/baseline_format_list_numbered_24"
            android:title="@string/menu_ranking" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_format_list_numbered_24"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/nav_item_signout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/signout" />
        </menu>
    </item>

</menu>
