<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen.social.nearby.NearbyFragment"
    android:orientation="horizontal"
    >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:visibility="visible"
             />

        <Button
            android:id="@+id/buttonDiscoverable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discoverable"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/buttonStartDiscovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_discovery"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:visibility="visible"
            />
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:visibility="visible"
            />

        <ListView
            android:id="@+id/listViewAvailableDevices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            />
    </LinearLayout>


</LinearLayout>