<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/button_facebook"
        android:layout_marginBottom="-179dp"
        android:alpha="0.4"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/text_view_login_tittle"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_login_tittle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/user_input_shape"
        android:hint="@string/email"
        android:maxLines="1"
        android:padding="16dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/user_input_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/user_btn_shape"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/button_siginup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/reg_btn_shape"
        android:text="@string/singup"
        android:textColor="@color/colorAccent" />

    <RelativeLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_siginup"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/divider_txt"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/divider_txt"
            android:background="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/divider_txt"
            android:background="@color/colorAccent" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/google_btn_shape"
        android:drawableStart="@drawable/ic_google_filled"
        android:drawableLeft="@drawable/ic_google_filled"
        android:paddingLeft="20dp"
        android:text="@string/button_google"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_google"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="179dp"
        android:background="@drawable/facebook_btn_shape"
        android:drawableStart="@drawable/ic_facebook_logo"
        android:drawableLeft="@drawable/ic_facebook_logo"
        android:paddingLeft="20dp"
        android:text="@string/button_facebook"
        android:textColor="@color/colorAccent" />

</RelativeLayout>